<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.ivansuhendra.packinggla.ui.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_homeFragment"
            app:destination="@id/nav_home"/>

        <action
            android:id="@+id/action_nav_home_to_transferFragment"
            app:destination="@id/nav_transfer"/>

        <action
            android:id="@+id/action_nav_home_to_receiveFragment"
            app:destination="@id/nav_receive"/>

        <action
            android:id="@+id/action_nav_home_to_loadFragment"
            app:destination="@id/nav_load"/>
    </fragment>

    <fragment
        android:id="@+id/nav_transfer"
        android:name="com.app.ivansuhendra.packinggla.ui.fragment.transfer.TransferFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/nav_receive"
        android:name="com.app.ivansuhendra.packinggla.ui.fragment.receive.ReceiveFragment"
        android:label="@string/menu_receive"
        tools:layout="@layout/fragment_receive" />

    <fragment
        android:id="@+id/nav_load"
        android:name="com.app.ivansuhendra.packinggla.ui.fragment.load.LoadFragment"
        android:label="@string/menu_load"
        tools:layout="@layout/fragment_load" />
</navigation>